# Author: Rafael J. Vicente <rafaelj.vicente@upm.es>
# Copyright (c) 2025 The QuantumMadrid-UPM-Hackathon-Qiskit-Fall-Fest-2025-QKD project authors. All rights reserved.
[build-system]
requires = [
    "setuptools==80.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumMadrid-UPM-Hackathon-Qiskit-Fall-Fest-2025-QKD"
version = "1.0.0"
description = "REST API that uses ETSI GS QKD 014 standard to extract keys from a QKD or simulated QRNG source"
authors = [
    { name = "Rafael J. Vicente", email = "rafaelj.vicente@upm.es" },
    { name = "Alberto Sebastian", email = "aj.sebastian@upm.es" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "annotated-types~=0.7.0",
    "fastapi~=0.121.0",
    "pydantic~=2.12.4",
    "requests~=2.32.5",
    "uvicorn[standard]~=0.38.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"quantummadrid_upm_hackathon_qiskit_fall_fest_2025_qkd.tls" = ["*"]

[project.scripts]
qstart-http-service = "quantummadrid_upm_hackathon_qiskit_fall_fest_2025_qkd.main:main"
qstart-https-service = "quantummadrid_upm_hackathon_qiskit_fall_fest_2025_qkd.main:tls_main"

[project.optional-dependencies]
dev = [
    "bandit~=1.8.6",
    "build~=1.3.0",
    "coverage~=7.10.7",
    "mypy~=1.18.2",
    "pip_audit~=2.9.0",
    "pre_commit~=4.3.0",
    "radon~=6.0.1",
    "ruff~=0.14.3",
    "vulture~=2.14",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]  # ignore line-length errors

[tool.bandit]
exclude = ["tests"]
skips = ["B104", "B311"]

[tool.mypy]
python_version = "3.9"
mypy_path = ["src"]
strict = true
ignore_missing_imports = true
